# krea2-svdquant

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: B200_KERNEL_NOTES.md  GENERIC_KERNELS.md  OPTIMIZATION_PATHS.md  ROADMAP.md
examples/: krea2_svdquant_api.py
scripts/: ask_claude_kernel_review.sh  baseline_infer.py  bench_linear.py  collect_calib.py  convert_simulated.py  infer_optimized.py  infer_svdquant_transformer.py  kernelide_activation_quant_triton.py  kernelide_dot_scaled_e2m1_triton.py  kernelide_smoke_gluon.py  kernelide_smoke_triton.py  kernelide_w4a16_linear_triton.py
src/krea2_svdquant/: __init__.py  config.py  transformer.py  utils.py
src/krea2_svdquant/inference/: __init__.py  optimizations.py
src/krea2_svdquant/kernels/gluon/: blackwell_fused_svdquant.py
src/krea2_svdquant/kernels/triton/: blackwell_int4.py  generic_int4.py
src/krea2_svdquant/quant/: pack.py  svd.py
src/krea2_svdquant/runtime/: block_offload.py  linear.py  load.py  lora.py  replace.py
tests/: test_block_offload_cpu.py  test_lora_loading.py  test_pack.py  test_svd_linear_cpu.py
